--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Node.js 14.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 14.x
 
@@ -24,9 +24,9 @@ jobs:
       - name: Fill Table With New Stats
         run: npm run update-stats-day
 
-      - uses: EndBug/add-and-commit@v5
+      - uses: EndBug/add-and-commit@v7
         with:
           add: 'covid_stats.csv'
-          author_name: Covid Parser
+          default_author: github_actions
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
