--- a/package.json
+++ b/package.json
@@ -3,18 +3,9 @@
   "version": "0.1.0",
   "description": "Covid-19 Stats in Russia",
   "main": "dist/index.js",
-  "prettier": {
-    "printWidth": 90,
-    "useTabs": true,
-    "semi": false,
-    "singleQuote": true,
-    "quoteProps": "consistent",
-    "trailingComma": "all"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
+  "prettier": "@lynxtaa/prettier-config",
+  "simple-git-hooks": {
+    "pre-commit": "npx pretty-quick --staged"
   },
   "repository": "https://github.com/lynxtaa/covid-stats-russia.git",
   "homepage": "https://github.com/lynxtaa/covid-stats-russia#readme",
@@ -28,28 +19,29 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
-    "date-fns": "^2.16.1",
-    "lodash": "^4.17.20",
-    "node-fetch": "^2.6.1",
+    "cheerio": "^1.0.0-rc.10",
+    "date-fns": "^2.28.0",
+    "lodash": "^4.17.21",
+    "node-fetch": "^2.6.6",
     "p-queue": "^6.6.2",
-    "papaparse": "^5.3.0",
-    "superstruct": "^0.10.12"
+    "papaparse": "^5.3.1",
+    "zod": "^3.11.6"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.22",
-    "@types/lodash": "^4.14.165",
-    "@types/node": "^14.14.6",
-    "@types/node-fetch": "^2.5.7",
-    "@types/papaparse": "^5.2.4",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.13.0",
-    "eslint-plugin-import": "^2.22.1",
-    "husky": "^4.3.0",
-    "prettier": "^2.1.2",
-    "pretty-quick": "^3.1.0",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "@lynxtaa/prettier-config": "^0.1.1",
+    "@types/cheerio": "^0.22.30",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^16.11.19",
+    "@types/node-fetch": "^2.5.12",
+    "@types/papaparse": "^5.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.6.0",
+    "eslint-plugin-import": "^2.25.4",
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3",
+    "simple-git-hooks": "^2.7.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
