--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
 	"compilerOptions": {
-		"target": "ES2018",
+		"target": "ES2020",
 		"lib": ["ESNext"],
 		"skipLibCheck": true,
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
-		"module": "CommonJS",
+		"noUncheckedIndexedAccess": true,
+		"module": "ESNext",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"outDir": "dist"
