chore: add shared eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,36 +1,4 @@
 {
 	"root": true,
-	"parser": "@typescript-eslint/parser",
-	"plugins": ["@typescript-eslint"],
-	"extends": [
-		"eslint:recommended",
-		"plugin:@typescript-eslint/recommended",
-		"plugin:import/errors",
-		"plugin:import/warnings",
-		"plugin:import/typescript"
-	],
-	"env": {
-		"es6": true,
-		"jest": true
-	},
-	"rules": {
-		"no-console": "warn",
-		"@typescript-eslint/no-explicit-any": "off",
-		"@typescript-eslint/prefer-optional-chain": "warn",
-		"@typescript-eslint/no-non-null-assertion": "off",
-		"@typescript-eslint/explicit-module-boundary-types": [
-			"warn",
-			{ "allowArgumentsExplicitlyTypedAsAny": true }
-		],
-		"import/extensions": ["error", "ignorePackages"],
-		"import/no-unresolved": "off",
-		"no-restricted-globals": [
-			"error",
-			"require",
-			"module",
-			"exports",
-			"__dirname",
-			"__filename"
-		]
-	}
+	"extends": ["@lynxtaa/eslint-config", "@lynxtaa/eslint-config/esm"]
 }
