--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
     "zod": "^3.11.6"
   },
   "devDependencies": {
+    "@lynxtaa/eslint-config": "^0.1.4",
     "@lynxtaa/prettier-config": "^0.1.1",
     "@types/cheerio": "^0.22.31",
     "@types/lodash": "^4.14.178",
-    "@types/node": "^16.11.22",
+    "@types/node": "^16.11.24",
     "@types/papaparse": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
-    "eslint": "^8.8.0",
+    "eslint": "^8.9.0",
     "eslint-plugin-import": "^2.25.4",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
