--- a/package.json
+++ b/package.json
@@ -20,29 +20,29 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.10",
-    "date-fns": "^2.28.0",
+    "cheerio": "1.0.0-rc.12",
+    "date-fns": "^2.29.2",
     "lodash": "^4.17.21",
-    "node-fetch": "^3.2.0",
-    "p-queue": "^7.2.0",
-    "papaparse": "^5.3.1",
-    "zod": "^3.11.6"
+    "node-fetch": "^3.2.10",
+    "p-queue": "^7.3.0",
+    "papaparse": "^5.3.2",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
-    "@lynxtaa/eslint-config": "^0.1.4",
+    "@lynxtaa/eslint-config": "^0.1.5",
     "@lynxtaa/prettier-config": "^0.1.1",
     "@types/cheerio": "^0.22.31",
-    "@types/lodash": "^4.14.178",
-    "@types/node": "^16.11.24",
-    "@types/papaparse": "^5.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "eslint": "^8.9.0",
-    "eslint-plugin-import": "^2.25.4",
-    "prettier": "^2.5.1",
+    "@types/lodash": "^4.14.184",
+    "@types/node": "^16.11.56",
+    "@types/papaparse": "^5.3.5",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "eslint": "^8.23.0",
+    "eslint-plugin-import": "^2.26.0",
+    "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
-    "simple-git-hooks": "^2.7.0",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.5.5"
+    "simple-git-hooks": "^2.8.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2"
   }
 }
