--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,16 +14,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 7
+
       - name: Set up Node.js 16.x
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci --silent
+        run: pnpm install
 
       - name: Check code
-        run: npm run lint
+        run: pnpm run lint
 
       - name: Build
-        run: npm run build
+        run: pnpm run build
