--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -13,16 +13,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 7
+
       - name: Set up Node.js 16.x
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci --silent
+        run: pnpm install
 
       - name: Fill Table With New Stats
-        run: npm run update-stats-day
+        run: pnpm run update-stats-day
 
       - uses: EndBug/add-and-commit@v7
         with:
