--- a/package.json
+++ b/package.json
@@ -2,47 +2,45 @@
   "name": "covid-stats-russia",
   "version": "0.1.0",
   "description": "Covid-19 Stats in Russia",
-  "main": "dist/index.js",
-  "prettier": "@lynxtaa/prettier-config",
+  "homepage": "https://github.com/lynxtaa/covid-stats-russia#readme",
+  "repository": "https://github.com/lynxtaa/covid-stats-russia.git",
+  "license": "MIT",
+  "author": "Alek Kondratyuk <lynxtaa@gmail.com>",
   "type": "module",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "tsc",
+    "lint": "eslint --ext .js,.ts src",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "update-stats-day": "node --loader ts-node/esm src/scripts/fillTableLatestDay.ts",
+    "update-stats-month": "node --loader ts-node/esm src/scripts/fillTableMonth.ts"
+  },
   "simple-git-hooks": {
     "pre-commit": "npx pretty-quick --staged"
   },
-  "repository": "https://github.com/lynxtaa/covid-stats-russia.git",
-  "homepage": "https://github.com/lynxtaa/covid-stats-russia#readme",
-  "author": "Alek Kondratyuk <lynxtaa@gmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "build": "tsc",
-    "update-stats-day": "node --loader ts-node/esm src/scripts/fillTableLatestDay.ts",
-    "update-stats-month": "node --loader ts-node/esm src/scripts/fillTableMonth.ts",
-    "lint": "eslint --ext .js,.ts src",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "prettier": "@lynxtaa/prettier-config",
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
-    "date-fns": "^2.29.2",
-    "lodash": "^4.17.21",
-    "node-fetch": "^3.2.10",
-    "p-queue": "^7.3.0",
-    "papaparse": "^5.3.2",
-    "zod": "^3.18.0"
+    "date-fns": "2.29.3",
+    "lodash": "4.17.21",
+    "p-queue": "7.3.0",
+    "papaparse": "5.3.2",
+    "undici": "5.13.0",
+    "zod": "3.19.1"
   },
   "devDependencies": {
-    "@lynxtaa/eslint-config": "^0.2.0",
-    "@lynxtaa/prettier-config": "^0.1.1",
-    "@types/cheerio": "^0.22.31",
-    "@types/lodash": "^4.14.184",
-    "@types/node": "^16.11.56",
-    "@types/papaparse": "^5.3.5",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "eslint": "^8.23.0",
-    "eslint-plugin-import": "^2.26.0",
-    "prettier": "^2.7.1",
-    "pretty-quick": "^3.1.3",
-    "simple-git-hooks": "^2.8.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
-  }
+    "@lynxtaa/eslint-config": "0.5.3",
+    "@lynxtaa/prettier-config": "0.1.1",
+    "@types/cheerio": "0.22.31",
+    "@types/lodash": "4.14.190",
+    "@types/node": "16.18.3",
+    "@types/papaparse": "5.3.5",
+    "eslint": "^8.28.0",
+    "prettier": "2.8.0",
+    "pretty-quick": "3.1.3",
+    "simple-git-hooks": "2.8.1",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.3"
+  },
+  "packageManager": "pnpm@7.17.1"
 }
