chore: disable scheduled updates. sunset the stats

--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -2,9 +2,9 @@ name: Update Stats
 
 on:
   workflow_dispatch:
-  schedule:
-    # At minute 0 past every 6th hour from 3 through 23 (UTC+0)
-    - cron: '0 3/6 * * *'
+  # schedule:
+  #   # At minute 0 past every 6th hour from 3 through 23 (UTC+0)
+  #   - cron: '0 3/6 * * *'
 
 jobs:
   stale:
